Made the screens pretty, added more foods, added the home and settings navigation buttons to the other screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,28 +14,40 @@
     <string name="account">account</string>
     <string name="settings">settings</string>
     <string name="user">User</string>
+    <string name="add_food_you_wasted">Add Food You Wasted</string>
+    <string name="add_amount">Add Amount</string>
+    <string name="select_amount">Select Amount</string>
+    <string name="young_adults_spend_the_most_food_statistically">Young adults spend the most food statistically</string>
     <string-array name="Foods">
         <item>Banana</item>
         <item>Chicken</item>
         <item>Apple</item>
         <item>Pear</item>
         <item>Bread</item>
-        <item>asparagus</item>
-        <item>apples</item>
-        <item>avocado</item>
-        <item>alfalfa</item>
-        <item>acorn squash</item>
-        <item>almond</item>
-        <item>arugula</item>
-        <item>artichoke</item>
-        <item>applesauce</item>
-        <item>asian noodles</item>
-        <item>antelope</item>
-        <item>ahi tuna</item>
-        <item>albacore tuna</item>
-        <item>Apple juice</item>
-        <item>Avocado roll</item>
-    </string-array>
+        <item>Egg</item>
+        <item>Milk</item>
+        <item>Butter</item>
+        <item>Yogurt</item>
+        <item>Feta</item>
+        <item>Peach</item>
+        <item>Lemon</item>
+        <item>Tomato</item>
+        <item>Papaya</item>
+        <item>Broccoli</item>
+        <item>Carrot</item>
+        <item>Avocado</item>
+        <item>Cucumber</item>
+        <item>Onion</item>
+        <item>Pepper</item>
+        <item>beef</item>
+        <item>Chicken Breast</item>
+        <item>Chicken Leg</item>
+        <item>Minced Meat</item>
+        <item>Pork</item>
+        <item>Whole Chicken</item>
+        <item>Tofu</item>
+        <item>Potato</item>
+        </string-array>
     <string-array name="Type">
         <item>grams</item>
         <item>ml</item>
